--- a/index.html
+++ b/index.html
@@ -9,35 +9,130 @@
     body {
       font-family: Arial, sans-serif;
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
+      flex-direction: column;
+      align-items: center;
       padding: 20px;
+      background-color: #f4f4f4;
     }
+
+    h1 {
+      margin-bottom: 30px;
+      font-size: 2em;
+    }
+
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      width: 90%;
+      max-width: 1200px;
+    }
+
     .modelo {
-      width: 300px;
-      height: 300px;
-      border: 1px solid #ccc;
+      background-color: #fff;
       border-radius: 10px;
-      overflow: hidden;
-      cursor: pointer;
+      padding: 10px;
+      text-align: center;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
     }
+
+    .modelo:hover {
+      transform: scale(1.05);
+    }
+
     model-viewer {
       width: 100%;
-      height: 100%;
+      height: 250px;
+      border-radius: 10px;
     }
+
+    .info {
+      margin-top: 10px;
+    }
+
+    .info h3 {
+      font-size: 1.1em;
+      margin: 5px 0;
+    }
+
+    .info p {
+      font-size: 0.9em;
+      color: #555;
+    }
+
   </style>
 </head>
 <body>
 
-  <div class="modelo">
-    <model-viewer src="modelo1.glb" alt="Modelo 1" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
-  </div>
-  <div class="modelo">
-    <model-viewer src="modelo2.glb" alt="Modelo 2" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
-  </div>
-  <div class="modelo">
-    <model-viewer src="modelo3.glb" alt="Modelo 3" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+  <h1>Catálogo de Modelos 3D</h1>
+
+  <div class="grid-container">
+    <div class="modelo">
+      <model-viewer src="modelo1.glb" alt="Modelo 1" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <div class="info">
+        <h3>Modelo 1</h3>
+        <p>Este es un modelo de ejemplo con descripción breve.</p>
+      </div>
+    </div>
+    <div class="modelo">
+      <model-viewer src="modelo2.glb" alt="Modelo 2" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <div class="info">
+        <h3>Modelo 2</h3>
+        <p>Otro modelo interesante que puedes ver desde todos los ángulos.</p>
+      </div>
+    </div>
+    <div class="modelo">
+      <model-viewer src="modelo3.glb" alt="Modelo 3" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <div class="info">
+        <h3>Modelo 3</h3>
+        <p>Un diseño único, perfecto para análisis 3D.</p>
+      </div>
+    </div>
+
+    <div class="modelo">
+      <model-viewer src="modelo4.glb" alt="Modelo 4" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <div class="info">
+        <h3>Modelo 4</h3>
+        <p>Este modelo presenta una complejidad geométrica interesante.</p>
+      </div>
+    </div>
+    <div class="modelo">
+      <model-viewer src="modelo5.glb" alt="Modelo 5" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <div class="info">
+        <h3>Modelo 5</h3>
+        <p>Ideal para ver detalles de estructuras.</p>
+      </div>
+    </div>
+    <div class="modelo">
+      <model-viewer src="modelo6.glb" alt="Modelo 6" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <div class="info">
+        <h3>Modelo 6</h3>
+        <p>Un modelo minimalista pero detallado.</p>
+      </div>
+    </div>
+
+    <div class="modelo">
+      <model-viewer src="modelo7.glb" alt="Modelo 7" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <div class="info">
+        <h3>Modelo 7</h3>
+        <p>Estilo futurista con alta definición.</p>
+      </div>
+    </div>
+    <div class="modelo">
+      <model-viewer src="modelo8.glb" alt="Modelo 8" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <div class="info">
+        <h3>Modelo 8</h3>
+        <p>Un modelo diseñado con curvas suaves.</p>
+      </div>
+    </div>
+    <div class="modelo">
+      <model-viewer src="modelo9.glb" alt="Modelo 9" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <div class="info">
+        <h3>Modelo 9</h3>
+        <p>Ideal para ver interacciones entre formas.</p>
+      </div>
+    </div>
   </div>
 
 </body>
