--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     }
 
     .grid-container {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
       width: 90%;
       max-width: 1200px;
     }
@@ -45,6 +45,7 @@
       width: 100%;
       height: 250px;
       border-radius: 10px;
+      background-color: #000; /* Fondo negro del visor */
     }
 
     .info {
@@ -69,21 +70,21 @@
 
   <div class="grid-container">
     <div class="modelo">
-      <model-viewer src="modelo1.glb" alt="Modelo 1" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <model-viewer src="modelo1.glb" alt="Modelo 1" auto-rotate camera-controls background-color="#000"></model-viewer>
       <div class="info">
         <h3>Modelo 1</h3>
         <p>Este es un modelo de ejemplo con descripción breve.</p>
       </div>
     </div>
     <div class="modelo">
-      <model-viewer src="modelo2.glb" alt="Modelo 2" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <model-viewer src="modelo2.glb" alt="Modelo 2" auto-rotate camera-controls background-color="#000"></model-viewer>
       <div class="info">
         <h3>Modelo 2</h3>
         <p>Otro modelo interesante que puedes ver desde todos los ángulos.</p>
       </div>
     </div>
     <div class="modelo">
-      <model-viewer src="modelo3.glb" alt="Modelo 3" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <model-viewer src="modelo3.glb" alt="Modelo 3" auto-rotate camera-controls background-color="#000"></model-viewer>
       <div class="info">
         <h3>Modelo 3</h3>
         <p>Un diseño único, perfecto para análisis 3D.</p>
@@ -91,21 +92,21 @@
     </div>
 
     <div class="modelo">
-      <model-viewer src="modelo4.glb" alt="Modelo 4" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <model-viewer src="modelo4.glb" alt="Modelo 4" auto-rotate camera-controls background-color="#000"></model-viewer>
       <div class="info">
         <h3>Modelo 4</h3>
         <p>Este modelo presenta una complejidad geométrica interesante.</p>
       </div>
     </div>
     <div class="modelo">
-      <model-viewer src="modelo5.glb" alt="Modelo 5" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <model-viewer src="modelo5.glb" alt="Modelo 5" auto-rotate camera-controls background-color="#000"></model-viewer>
       <div class="info">
         <h3>Modelo 5</h3>
         <p>Ideal para ver detalles de estructuras.</p>
       </div>
     </div>
     <div class="modelo">
-      <model-viewer src="modelo6.glb" alt="Modelo 6" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <model-viewer src="modelo6.glb" alt="Modelo 6" auto-rotate camera-controls background-color="#000"></model-viewer>
       <div class="info">
         <h3>Modelo 6</h3>
         <p>Un modelo minimalista pero detallado.</p>
@@ -113,21 +114,21 @@
     </div>
 
     <div class="modelo">
-      <model-viewer src="modelo7.glb" alt="Modelo 7" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <model-viewer src="modelo7.glb" alt="Modelo 7" auto-rotate camera-controls background-color="#000"></model-viewer>
       <div class="info">
         <h3>Modelo 7</h3>
         <p>Estilo futurista con alta definición.</p>
       </div>
     </div>
     <div class="modelo">
-      <model-viewer src="modelo8.glb" alt="Modelo 8" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <model-viewer src="modelo8.glb" alt="Modelo 8" auto-rotate camera-controls background-color="#000"></model-viewer>
       <div class="info">
         <h3>Modelo 8</h3>
         <p>Un modelo diseñado con curvas suaves.</p>
       </div>
     </div>
     <div class="modelo">
-      <model-viewer src="modelo9.glb" alt="Modelo 9" auto-rotate camera-controls background-color="#ffffff"></model-viewer>
+      <model-viewer src="modelo9.glb" alt="Modelo 9" auto-rotate camera-controls background-color="#000"></model-viewer>
       <div class="info">
         <h3>Modelo 9</h3>
         <p>Ideal para ver interacciones entre formas.</p>
