--- a/index.html
+++ b/index.html
@@ -70,24 +70,14 @@
 
   <div class="grid-container">
     <div class="modelo">
-      <model-viewer src="modelo1.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy">
-    <div class="progress-bar hide" slot="progress-bar">
-        <div class="update-bar"></div>
-    </div>
-    <button slot="ar-button" id="ar-button">
-        View in your space
-    </button>
-    <div id="ar-prompt">
-        <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
-    </div>
-      ></model-viewer>
+      <model-viewer src="modelo1.glb" alt="Modelo 1" auto-rotate camera-controls background-color="#FFF" tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
       <div class="info">
         <h3>Cráneo con traumatismo</h3>
         <p>Este es un modelo de ejemplo con descripción breve.</p>
       </div>
     </div>
 
-
+    
 
 
     <div class="modelo">
