--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <div class="grid-container">
     <div class="modelo">
-      <model-viewer src="modelo1.glb" alt="Modelo 1" auto-rotate camera-controls background-color="#FFF" tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
+      <model-viewer src="modelo1.glb" alt="Modelo 1" auto-rotate camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
       <div class="info">
         <h3>Cráneo con traumatismo</h3>
         <p>Este es un modelo de ejemplo con descripción breve.</p>
