--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 
 
     <div class="modelo">
-      <model-viewer src="modelo2.glb" alt="Modelo 2" auto-rotate camera-controls background-color="#000"></model-viewer>
+      <model-viewer src="modelo2.glb" alt="Modelo 2" auto-rotate camera-controls background-color="#000"tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
       <div class="info">
         <h3>Mano</h3>
         <p>Otro modelo interesante que puedes ver desde todos los ángulos.</p>
       </div>
     </div>
     <div class="modelo">
-      <model-viewer src="modelo3.glb" alt="Modelo 3" auto-rotate camera-controls background-color="#000"></model-viewer>
+      <model-viewer src="modelo3.glb" alt="Modelo 3" auto-rotate camera-controls background-color="#000"tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
       <div class="info">
         <h3>Brazo - Niño</h3>
         <p>Un diseño único, perfecto para análisis 3D.</p>
@@ -96,14 +96,14 @@
     </div>
 
     <div class="modelo">
-      <model-viewer src="modelo4.glb" alt="Modelo 4" auto-rotate camera-controls background-color="#000"></model-viewer>
+      <model-viewer src="modelo4.glb" alt="Modelo 4" auto-rotate camera-controls background-color="#000"tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
       <div class="info">
         <h3>Hombro con osteofitos</h3>
         <p>Este modelo presenta una complejidad geométrica interesante.</p>
       </div>
     </div>
     <div class="modelo">
-      <model-viewer src="modelo5.glb" alt="Modelo 5" auto-rotate camera-controls background-color="#000"></model-viewer>
+      <model-viewer src="modelo5.glb" alt="Modelo 5" auto-rotate camera-controls background-color="#000"tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
       <div class="info">
         <h3>Cadera con implante de cadera</h3>
         <p>Ideal para ver detalles de estructuras.</p>
