--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <model-viewer src="modelo1.glb" alt="Modelo 1" auto-rotate camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
       <div class="info">
         <h3>Cráneo con traumatismo</h3>
-        <p>Este es un modelo de ejemplo con descripción breve.</p>
+        <p>Biomodelo de craneo con traumatismo de estructura sólida que facilita comprender lesiones óseas y buscar soluciones médicas.</p>
       </div>
     </div>
 
@@ -91,7 +91,8 @@
       <model-viewer src="modelo3.glb" alt="Modelo 3" auto-rotate camera-controls background-color="#000"tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
       <div class="info">
         <h3>Brazo - Niño</h3>
-        <p>Un diseño único, perfecto para análisis 3D.</p>
+        <p>En este modelo podemos observar la reconstrucción en 3D del brazo humano, donde se distinguen algunos huesos como el húmero, el radio y el cúbito.
+El modelo está ubicado dentro de un espacio con ejes de referencia que ayudan a identificar la orientación del brazo. Este trabajo permite visualizar la estructura ósea de forma más realista y entender mejor cómo se articulan las diferentes partes del miembro superior.</p>
       </div>
     </div>
 
@@ -99,14 +100,14 @@
       <model-viewer src="modelo4.glb" alt="Modelo 4" auto-rotate camera-controls background-color="#000"tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
       <div class="info">
         <h3>Hombro con osteofitos</h3>
-        <p>Este modelo presenta una complejidad geométrica interesante.</p>
+        <p>Este modelo 3D representa de forma detallada y realista la anatomía del hombro humano con la presencia de un osteofito. Muestra la estructura ósea, incluyendo la cabeza del húmero, la cavidad glenoidea y la articulación acromioclavicular, destacando el crecimiento óseo anormal en la cabeza humeral.</p>
       </div>
     </div>
     <div class="modelo">
       <model-viewer src="modelo5.glb" alt="Modelo 5" auto-rotate camera-controls background-color="#000"tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
       <div class="info">
         <h3>Cadera con implante de cadera</h3>
-        <p>Ideal para ver detalles de estructuras.</p>
+        <p>Los huesos de la cadera forman la pelvis, unen la columna con las piernas y protegen órganos internos. Están formados por el ilion, isquion y pubis, que permiten el movimiento y sostienen el peso del cuerpo.</p>
       </div>
     </div>
 
