--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
       <model-viewer src="modelo2.glb" alt="Modelo 2" auto-rotate camera-controls background-color="#000"tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
       <div class="info">
         <h3>Mano</h3>
-        <p>Otro modelo interesante que puedes ver desde todos los ángulos.</p>
+        <p>Este modelo 3D muestra los huesos de la mano humana con gran detalle, permitiendo observar su forma, tamaño y cómo se conectan entre sí para formar la estructura ósea de la mano.</p>
       </div>
     </div>
+
     <div class="modelo">
       <model-viewer src="modelo3.glb" alt="Modelo 3" auto-rotate camera-controls background-color="#000"tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" exposure="0.53" shadow-softness="0.74" environment-image="legacy"></model-viewer>
       <div class="info">
         <h3>Brazo - Niño</h3>
-        <p>En este modelo podemos observar la reconstrucción en 3D del brazo humano, donde se distinguen algunos huesos como el húmero, el radio y el cúbito.
-El modelo está ubicado dentro de un espacio con ejes de referencia que ayudan a identificar la orientación del brazo. Este trabajo permite visualizar la estructura ósea de forma más realista y entender mejor cómo se articulan las diferentes partes del miembro superior.</p>
+        <p>En este modelo podemos observar la reconstrucción en 3D del brazo humano, donde se distinguen algunos huesos como el húmero, el radio y el cúbito. El modelo está ubicado dentro de un espacio con ejes de referencia que ayudan a identificar la orientación del brazo. Este trabajo permite visualizar la estructura ósea de forma más realista y entender mejor cómo se articulan las diferentes partes del miembro superior.</p>
       </div>
     </div>
 
